# mpirs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benchmarks/: README.md  daxpy_plot.data  sendrecv_plot.data  token_plot.data
benchmarks/c/: bench_token.c  data.c  daxpy.c
benchmarks/python/: bench_data.py  bench_token.py  daxpy.py
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: bench_data.rs  daxpy.rs  token.rs
examples/: bcast.rs  ping.rs  rank.rs  token.rs
mpirun/: mailbox.rs  main.rs
src/: barrier.rs  bcast.rs  comm_rank.rs  comm_request.rs  finalize.rs  gather.rs  init.rs  lib.rs  mpi_comm.rs  mpi_datatype.rs  mpi_request.rs  num_procs.rs  receive.rs  receiver_traits.rs  scatter.rs  send.rs  wait.rs
