[package]
name = "mpirs"
version = "0.1.0"
authors = ["Sushant <sushant.dinesh94@gmail.com>",
           "Karthik Senthil <karthik.senthil@gmail.com>"]

[[bin]]
name = "mpirun"
path = "mpirun/main.rs"

[dependencies]
docopt = "*"
rustc-serialize = "*"
libc = "*"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
bincode = "*"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
